Style UH Recurring Digital paragraphs

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
@@ -32,6 +32,14 @@ uh-axe:
     - core/jquery
     - core/drupal
 
+uh-recurring-digital:
+  version: 1.x
+  js:
+    js/custom/plus/uh-recurring-digital.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+
 slider:
   version: 1.x
   js:
