--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
         "doctrine/collections": "~1.4.0",
         "doctrine/cache": "~1.6.2",
         "doctrine/common": "~2.7.3",
-        "phpdocumentor/reflection-docblock": "^2.0"
+        "phpdocumentor/reflection-docblock": "^2.0",
+        "drupal/magnific_popup": "^1.3"
     },
     "require-dev": {
         "behat/mink": "~1.7",
