--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "doctrine/cache": "~1.6.2",
         "doctrine/common": "~2.7.3",
         "phpdocumentor/reflection-docblock": "^2.0",
-        "drupal/magnific_popup": "^1.3"
+        "drupal/magnific_popup": "^1.3",
+        "drupal/comments_order": "^1.0@beta"
     },
     "require-dev": {
         "behat/mink": "~1.7",
