--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "doctrine/common": "~2.7.3",
         "phpdocumentor/reflection-docblock": "^2.0",
         "drupal/magnific_popup": "^1.3",
-        "drupal/comments_order": "^1.0@beta"
+        "drupal/comments_order": "^1.0@beta",
+        "drupal/hotjar": "^1.2"
     },
     "require-dev": {
         "behat/mink": "~1.7",
