Various content based updates - Rearranged libraries. - Added support for product image gallery and popup. - Cart block improvements.

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
@@ -9,6 +9,8 @@ global-styling:
     - core/jquery
     - core/drupal
     - commerce_2_demo/fitVid
+    - magnific_popup/magnific_popup
+    - commerce_2_demo/slider
 
 tours:
   version: 1.x
