--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         "phpdocumentor/reflection-docblock": "^2.0",
         "drupal/magnific_popup": "^1.3",
         "drupal/comments_order": "^1.0@beta",
-        "drupal/hotjar": "^1.2"
+        "drupal/hotjar": "^1.2",
+        "drupal/commerce_pos": "2.x-dev"
     },
     "require-dev": {
         "behat/mink": "~1.7",
