--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
         "composer/installers": "^1.2",
         "drupal-composer/drupal-scaffold": "^2.2",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "~8.5",
+        "drupal/core": "8.5.0",
         "drupal/console": "~1.0",
         "drupal/commerce": "^2.2",
         "drupal/swiftmailer": "1.x-dev",
         "drupal/config_inspector": "1.x-dev",
-        "drupal/entity": "1.x",
+        "drupal/entity": "~1.0",
         "acromedia/drupalorange_profile": "dev-8.x-1.x",
         "drupal/menu_block": "^1.4",
         "drupal/webform": "5.x-dev",
@@ -118,7 +118,7 @@
         "patches": {
             "drupal/commerce": {
                 "#2882905: Adds unique identifier for stored payment methods":
-                "https://www.drupal.org/files/issues/add_unique_identifier_for_stored_payment_methods-2882905-5.patch",
+                "https://www.drupal.org/files/issues/2882905-13.patch",
                 "#2901504: Provide limit by no of orders per user condition for promotions in commerce core":
                 "https://www.drupal.org/files/issues/provide_limit_by_no_of-2901504-2.patch",
                 "#2770731: Add a display name to promotions":
