--- a/composer.json
+++ b/composer.json
@@ -122,7 +122,9 @@
                 "#2901504: Provide limit by no of orders per user condition for promotions in commerce core":
                 "https://www.drupal.org/files/issues/provide_limit_by_no_of-2901504-2.patch",
                 "#2770731: Add a display name to promotions":
-                "https://www.drupal.org/files/issues/adjustment_label-2770731-28.patch"
+                "https://www.drupal.org/files/issues/adjustment_label-2770731-28.patch",
+                "#2852207: Billing same as shipping":
+                "https://www.drupal.org/files/issues/checkbox-same-as-billing-2852207-93.patch"
             }
         }
     }
