--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "drupal/magnific_popup": "^1.3",
         "drupal/comments_order": "^1.0@beta",
         "drupal/hotjar": "^1.2",
-        "drupal/commerce_pos": "2.x-dev"
+        "drupal/commerce_pos": "2.x-dev",
+        "drupal/contribute": "^5.0@beta"
     },
     "require-dev": {
         "behat/mink": "~1.7",
