Add initial libraries, templates and styling for DrupalCon preorder

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
@@ -42,6 +42,15 @@ uh-recurring-digital:
     - core/jquery
     - core/drupal
 
+uh-drupalcon-preorder:
+  version: 1.x
+  js:
+    js/contrib/jquery.form-validator.min.js: {}
+    js/custom/plus/uh-drupalcon-preorder.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+
 slider:
   version: 1.x
   js:
