--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "composer/installers": "^1.2",
         "drupal-composer/drupal-scaffold": "^2.2",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "8.5.0",
+        "drupal/core": "~8.5.0",
         "drupal/console": "~1.0",
         "drupal/commerce": "^2.2",
         "drupal/swiftmailer": "1.x-dev",
