--- a/composer.json
+++ b/composer.json
@@ -126,11 +126,12 @@
                 "#2852207: Billing same as shipping":
                 "https://www.drupal.org/files/issues/2018-04-06/checkbox-same-as-billing-2852207-153.patch"
             },
-	    "drupal/commerce_pos": {
-		"#2950908: Customer Facing Screen":
-		"https://www.drupal.org/files/issues/2018-04-06/commerce_pos-customer_display-2950980-22.patch",
-		"omni omni": "./omni-omni.patch"
-	    }
+	          "drupal/commerce_pos": {
+		            "#2950908: Customer Facing Screen":
+		            "https://www.drupal.org/files/issues/2018-04-06/commerce_pos-customer_display-2950980-22.patch",
+                "omni omni": "patches/omni-omni.patch",
+                "drupalcon": "patches/drupalcon.patch"
+	          }
         }
     }
 }
