--- a/composer.json
+++ b/composer.json
@@ -123,8 +123,8 @@
                 "https://www.drupal.org/files/issues/provide_limit_by_no_of-2901504-2.patch",
                 "#2770731: Add a display name to promotions":
                 "https://www.drupal.org/files/issues/adjustment_label-2770731-28.patch",
-                "#2852207: Billing same as shipping":
-                "https://www.drupal.org/files/issues/2018-04-06/checkbox-same-as-billing-2852207-153.patch"
+#                "#2852207: Billing same as shipping":
+#                "https://www.drupal.org/files/issues/2018-04-06/checkbox-same-as-billing-2852207-153.patch"
             },
 	          "drupal/commerce_pos": {
 		            "#2950908: Customer Facing Screen":
