--- a/composer.json
+++ b/composer.json
@@ -122,14 +122,10 @@
                 "#2901504: Provide limit by no of orders per user condition for promotions in commerce core":
                 "https://www.drupal.org/files/issues/provide_limit_by_no_of-2901504-2.patch",
                 "#2770731: Add a display name to promotions":
-                "https://www.drupal.org/files/issues/adjustment_label-2770731-28.patch"
-            },
-	          "drupal/commerce_pos": {
-		            "#2950908: Customer Facing Screen":
-		            "https://www.drupal.org/files/issues/2018-04-06/commerce_pos-customer_display-2950980-22.patch",
-                "omni omni": "patches/omni-omni.patch",
-                "drupalcon": "patches/drupalcon.patch"
-	          }
+                "https://www.drupal.org/files/issues/adjustment_label-2770731-28.patch",
+                "#2852207: Billing same as shipping":
+                "https://www.drupal.org/files/issues/2018-04-07/checkbox-same-as-billing-2852207-154.patch"
+            }
         }
     }
 }
