--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
         "drupal/magnific_popup": "^1.3",
         "drupal/comments_order": "^1.0@beta",
         "drupal/hotjar": "^1.2",
-        "drupal/commerce_pos": "2.x-dev",
+        "drupal/commerce_pos": "^2.0",
         "drupal/contribute": "^1.0",
         "cboden/ratchet": "^0.4.1",
         "drupal/asset_injector": "^2.2",
