--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,38 +23,29 @@ code_standards:
     - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md web/modules/custom
     - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md web/themes/custom --ignore=*.css
 
-custom_tests_d8:
+code_quality:
   stage: test
   when: manual
-
-  services:
-  - theasci/docker-mysql-tmpfs:latest
-
   script:
-    # apache should be running by default, and does on my local, but gitlabci
-    # prevents that for some reason, so we manually start it
-    # the & is important so it doesn't block everything below it from running.
-    - apache2-foreground > /dev/null 2>&1 &
+    - mkdir code_quality
+    - phpmd web/modules/custom html cleancode --reportFile code_quality/phpmd-cleancode.html
+    - phpmd web/modules/custom html codesize --reportFile code_quality/phpmd-codesize.html
+    - phpmd web/modules/custom html controversial --reportFile code_quality/phpmd-controversial.html
+    - phpmd web/modules/custom html design --reportFile code_quality/phpmd-design.html
+    - phpmd web/modules/custom html naming --reportFile code_quality/phpmd-naming.html
+    - phpmd web/modules/custom html unusedcode --reportFile code_quality/phpmd-unusedcode.html
 
-    # move to the webroot
-    - cp . /var/www/html/ -rf
-    - cd /var/www/html
+    - phpcpd wwwroot/sites/all/modules/SITENAME --log-pmd=code_quality/phpcpd.xml
+    
+  artifacts:
+    paths:
+      - code_quality
 
-    # if you have issues with rate limiting, you'll want to setup a github key variable and uncomment the config line below
-    # https://getcomposer.org/doc/articles/troubleshooting.md#api-rate-limit-and-oauth-tokens
-    #- composer config -g github-oauth.github.com $DEPLOY_GITHUB
-
-    - composer install
-
-    #install the drupal site provided by the docker image so we can use it for testing
-    - cd web
-    - drush site-install standard --db-url='mysql://testrunner:@theasci__docker-mysql-tmpfs/drupal' -y
-
-    - export SIMPLETEST_DB='mysql://testrunner:@theasci__docker-mysql-tmpfs/drupal'
-    - export SIMPLETEST_BASE_URL=http://localhost
-    - export BROWSERTEST_OUTPUT_DIRECTORY=/tmp
-    #- ../vendor/phpunit/phpunit/phpunit -c core/phpunit.xml.dist --group SITENAME
-    - echo 'No custom unit tests currently, edit config if they are added'
+security_advisories:
+  stage: test
+  script:
+    # Run the SensioLabs security advisory checker. See security.sensiolabs.org.
+    - security-checker security:check composer.lock
 
 build:
   stage: build
@@ -217,7 +208,7 @@ plus-demo-to-live:
     - echo "$PRODUCTION_FINGERPRINT" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
-    - rsync -av --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ drupalcommerce@cloud4.acromedia.com:/home/drupalcommerce/www/demoplus/
+    - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ drupalcommerce@cloud4.acromedia.com:/home/drupalcommerce/www/demoplus/
 
     # log into the site, reset settings.php permissions and run scripts.
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
