--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,9 @@ code_standards:
   script:
     # runs the Drupal code standards checks on our custom code
     # the Drupal Code Standards come from the Coder module, which is automatically part of the base testing image
-    - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md web/modules/custom
-    - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md web/themes/custom --ignore=*.css
+    - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --file-list=template.phpcs-files --ignore=*.css
 
-code_quality:
+mess_detector:
   stage: test
   script:
     - phpmd web/modules/custom text cleancode || true
@@ -38,6 +37,27 @@ code_quality:
   artifacts:
     paths:
       - code_quality
+
+codequality:
+  # It won't make sense to run codequality on deploy branches, because we
+  # are assuming that the developer has already addressed the problems.
+  # except:
+    # - uat
+    # - master
+  image: docker:stable
+  stage: test
+  variables:
+    DOCKER_DRIVER: overlay2
+  allow_failure: true
+  services:
+    - docker:stable-dind
+  before_script:
+    - docker info
+  script:
+    - docker pull codeclimate/codeclimate
+    - docker run --env CODECLIMATE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze -f json > codeclimate.json
+  artifacts:
+    paths: [codeclimate.json]
 
 security_advisories:
   stage: test
