--- a/web/themes/custom/commerce_2_demo/package.json
+++ b/web/themes/custom/commerce_2_demo/package.json
@@ -10,12 +10,15 @@
   "author": "Acro Media Inc.",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.5.1",
+    "autoprefixer": "^8.6.3",
     "gulp": "^3.9.1",
-    "gulp-postcss": "^6.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.8.0",
-    "postcss-easysprites": "^0.1.7"
+    "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.3.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "postcss-easysprites": "^0.1.9"
+  },
+  "dependencies": {
+    "graceful-fs": "^4.1.11"
   }
 }
