--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ code_standards:
 mess_detector:
   stage: test
   script:
-    - phpcs --standard=DrupalPractice --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --file-list=.phpcs-files --ignore=*.css
+    - phpcs --standard=DrupalPractice --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --file-list=.phpcs-files --ignore=*.css || true
 
     - phpmd web/modules/custom text cleancode || true
     - phpmd web/modules/custom text codesize || true
@@ -36,9 +36,10 @@ mess_detector:
 
     - phpcpd web/modules/custom || true
 
-  artifacts:
-    paths:
-      - code_quality
+debt:
+  stage: test
+  script:
+    - phpdebt web/modules/custom
 
 codequality:
   # It won't make sense to run codequality on deploy branches, because we
@@ -47,7 +48,6 @@ codequality:
     # - uat
     # - master
   image: docker:stable
-  stage: test
   variables:
     DOCKER_DRIVER: overlay2
   allow_failure: true
