--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -232,12 +232,12 @@ plus-demo-to-live:
     - ssh drupalcommerce@cloud4.acromedia.com 'chown drupalcommerce:drupalcommerce-demoplus-srv /home/drupalcommerce/www/demoplus/web/sites/default/settings.php && /bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-live.sh
 
 plus-demo-live-post:
-  image: debian
+  image: smmccabe/docker-loadtest
   stage: post
   dependencies:
     - plus-demo-to-live
   script:
-    - apt-get update && apt-get install -y firefox bc
-    - wget https://raw.githubusercontent.com/smmccabe/loadtimer/master/loadtimer
-    - chmod +x loadtimer
-    - ./loadtimer commerceplus.acromedia.com
+    # Run first at a higher threshold to allow for cache generation, if it takes longer than this
+    # thats a problem, an uncached page should take > 10 seconds
+    - loadtimer commerceplus.acromedia.com 10000
+    - loadtimer commerceplus.acromedia.com 5000
