Add Access Gate region, template and jquery. Apply other minor styling updates.

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.info.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.info.yml
@@ -33,3 +33,4 @@ regions:
   social_nav: 'Footer Top - Social Media Navigation'
   footer: 'Footer Main'
   footer_nav: 'Footer Bottom - Navigation'
+  access_gate: 'Access Gate'
