Add files for Feature Beacon update

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.info.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.info.yml
@@ -33,4 +33,5 @@ regions:
   social_nav: 'Footer Top - Social Media Navigation'
   footer: 'Footer Main'
   footer_nav: 'Footer Bottom - Navigation'
+  feature_beacon: 'Feature Beacon'
   access_gate: 'Access Gate'
