Complete feature beacon template, styling and jQuery

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
@@ -58,6 +58,7 @@ uh-feature-beacon:
   dependencies:
     - core/jquery
     - core/drupal
+    - commerce_2_demo/cookie
 
 uh-pado:
   version: 1.x
